product div gap fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -468,9 +468,9 @@ nav {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-
+  gap:20px
 }
 
 .product-parent-container {
